# math-array

./: .gitmodules  CMakeLists.txt  README.md
doc/: index.html
include/math-array/: archive.hpp  array.hpp  io.hpp  range.hpp
test/: CMakeLists.txt
test/all/: CMakeLists.txt  main.cpp
test/all/src/: main.cpp
